--- a/website/package.json
+++ b/website/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
+    "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
